--- a/ground/gcs/src/plugins/telemetryscheduler/metadata_dialog.ui
+++ b/ground/gcs/src/plugins/telemetryscheduler/metadata_dialog.ui
@@ -32,6 +32,9 @@
       </item>
       <item row="0" column="1">
        <widget class="QCheckBox" name="cbFlightReadOnly">
+        <property name="toolTip">
+         <string>When this is checked, the flight controller can only read the UAVO, it cannot write to it.</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -46,6 +49,9 @@
       </item>
       <item row="1" column="1">
        <widget class="QCheckBox" name="cbGCSReadOnly">
+        <property name="toolTip">
+         <string>When this is checked, the GCS can only read the UAVO, it cannot write to it.</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -60,6 +66,9 @@
       </item>
       <item row="2" column="1">
        <widget class="QCheckBox" name="cbFlightAcked">
+        <property name="toolTip">
+         <string>When this is checked, when the flight controller sends the UAVO via telemetry, it requires an acknowledgment response.</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -74,6 +83,9 @@
       </item>
       <item row="3" column="1">
        <widget class="QCheckBox" name="cbGCSAcked">
+        <property name="toolTip">
+         <string>When this is checked, when the GCS sends the UAVO via telemetry, it requires an acknowledgment response.</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -87,7 +99,20 @@
        </widget>
       </item>
       <item row="4" column="1">
-       <widget class="QComboBox" name="cmbFlightTelemetryMode"/>
+       <widget class="QComboBox" name="cmbFlightTelemetryMode">
+        <property name="toolTip">
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;This sets the flight controller to GCS telemetry mode.&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Manual&lt;/span&gt;: The UAVO is transmitted only upon request from the GCS&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;On Change&lt;/span&gt;: The UAVO is transmitted whenever the UAVO changes&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Periodic&lt;/span&gt;: The UAVO is transmitted at the defined periodic rate&lt;span style=&quot; font-style:italic;&quot;&gt;.&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Throttled&lt;/span&gt;: The UAVO is transmitted whenever the UAVO changes, but the transmissions can never occur more quickly than the defined periodic rate&lt;span style=&quot; font-style:italic;&quot;&gt;.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="cbFlightTelemetryMode">
@@ -97,13 +122,33 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QComboBox" name="cmbGCSTelemetryMode"/>
+       <widget class="QComboBox" name="cmbGCSTelemetryMode">
+        <property name="toolTip">
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;This sets the GCS to flight controller telemetry mode.&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Manual&lt;/span&gt;: The UAVO is transmitted only upon request from the GCS&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;On Change&lt;/span&gt;: The UAVO is transmitted whenever the UAVO changes&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Periodic&lt;/span&gt;: The UAVO is transmitted at the defined periodic rate&lt;span style=&quot; font-style:italic;&quot;&gt;.&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Throttled&lt;/span&gt;: The UAVO is transmitted whenever the UAVO changes, but the transmissions can never occur more quickly than the defined periodic rate&lt;span style=&quot; font-style:italic;&quot;&gt;.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QPushButton" name="bnResetToDefaults">
+     <property name="toolTip">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Restore default metadata settings. &lt;span style=&quot; font-weight:600;&quot;&gt;NOTE&lt;/span&gt;: Does not reset periodic update rate.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
      <property name="text">
       <string>Reset to Defaults</string>
      </property>
@@ -124,6 +169,9 @@
    </item>
    <item row="1" column="2">
     <widget class="QPushButton" name="bnCancel">
+     <property name="toolTip">
+      <string>Cancel and make no changes.</string>
+     </property>
      <property name="text">
       <string>Cancel</string>
      </property>
@@ -131,6 +179,13 @@
    </item>
    <item row="1" column="3">
     <widget class="QPushButton" name="bnApply">
+     <property name="toolTip">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Apply new metadata settings. &lt;span style=&quot; font-weight:600;&quot;&gt;NOTE&lt;/span&gt;: Does not affect periodic update rate.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
      <property name="text">
       <string>Apply</string>
      </property>
