--- a/ground/gcs/src/plugins/telemetryscheduler/telemetryscheduler.ui
+++ b/ground/gcs/src/plugins/telemetryscheduler/telemetryscheduler.ui
@@ -35,13 +35,20 @@
    </item>
    <item row="4" column="0">
     <widget class="QPushButton" name="bnLoadTelemetryFromFile">
+     <property name="toolTip">
+      <string>Load the telemetry schedule from a file.</string>
+     </property>
      <property name="text">
       <string>Load from File</string>
      </property>
     </widget>
    </item>
    <item row="4" column="4">
-    <widget class="QComboBox" name="cmbScheduleList"/>
+    <widget class="QComboBox" name="cmbScheduleList">
+     <property name="toolTip">
+      <string>Choose the column to be sent to the flight controller. Blank cells are replaced by the default telemetry setting.</string>
+     </property>
+    </widget>
    </item>
    <item row="4" column="3">
     <widget class="QLabel" name="label">
@@ -58,6 +65,9 @@
        <height>16777215</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Send the selected column settings to the flight controller. Blank cells are replaced by the default telemetry setting.</string>
+     </property>
      <property name="text">
       <string>Apply</string>
      </property>
@@ -65,6 +75,9 @@
    </item>
    <item row="4" column="1">
     <widget class="QPushButton" name="bnSaveTelemetryToFile">
+     <property name="toolTip">
+      <string>Save the telemetry schedule to a file.</string>
+     </property>
      <property name="text">
       <string>Save to File</string>
      </property>
@@ -102,6 +115,9 @@
           <height>25</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>Add a new column on the right. Double-click the column header to change the name.</string>
+        </property>
         <property name="text">
          <string>+</string>
         </property>
@@ -114,6 +130,13 @@
           <width>25</width>
           <height>25</height>
          </size>
+        </property>
+        <property name="toolTip">
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Remove the rightmost column. &lt;span style=&quot; font-weight:600;&quot;&gt;WARNING&lt;/span&gt;: Cannot be undone.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
          <string>-</string>
