--- a/ground/gcs/src/plugins/config/modulesettingsform.ui
+++ b/ground/gcs/src/plugins/config/modulesettingsform.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
    <item row="0" column="0">
-    <widget class="QGroupBox" name="groupBox_2">
+    <widget class="QGroupBox" name="gb_GPS">
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -54,7 +54,7 @@
     </widget>
    </item>
    <item row="0" column="1" rowspan="3">
-    <widget class="QGroupBox" name="groupBox_4">
+    <widget class="QGroupBox" name="gb_Battery">
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -271,7 +271,7 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="1" column="0">
-    <widget class="QGroupBox" name="groupBox_5">
+    <widget class="QGroupBox" name="gb_Airspeed">
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -384,7 +384,7 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="2" column="0" rowspan="2">
-    <widget class="QGroupBox" name="groupBox_3">
+    <widget class="QGroupBox" name="gb_VibrationAnalysis">
      <property name="minimumSize">
       <size>
        <width>0</width>
